fixed width + alignment, adjusted wrapper colours

--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #adadad;
+  background-color: #77a4c4;
 }
 
 .container {
@@ -15,7 +15,7 @@ body {
   box-shadow: 4px 4px 4px 4px rgb(0 0 0 / 25%);
   display: block;
   padding: 20px;
-  max-width: 650px;
+  width: 650px;
   margin: 20px auto;
 }
 
@@ -35,15 +35,16 @@ body {
 #city-search {
   box-shadow: 2px 2px 4px 2px rgb(0 0 0 / 25%);
   font-weight: 100;
+  font-size: 14px;
 }
 #city-search {
   background-color: #adc8db;
-  border: solid 1px #bfbfbf;
+  border: solid 1px #adc8db;
 }
 #search-button {
   background-color: #ce5e40;
   border: solid 1px #ce5e40;
-  font-size: 14px;
+
   text-align: center;
   transition: all 150ms ease-in-out;
 }
@@ -54,7 +55,6 @@ body {
 #location-button {
   background-color: #626263;
   border: solid 1px #6f6f70;
-  font-size: 14px;
   text-align: center;
   transition: all 150ms ease-in-out;
 }
@@ -67,8 +67,8 @@ body {
 
 /*results upper*/
 .results-wrapper {
-  background-color: #77a4c4;
-  border: solid 1px #77a4c4;
+  background-color: #96bbd3;
+  border: solid 1px #96bbd3;
   border-radius: 20px;
   box-sizing: border-box;
   box-shadow: 2px 2px 4px 2px rgb(0 0 0 / 25%);
@@ -77,7 +77,7 @@ body {
 }
 
 .card {
-  background-color: #77a4c4;
+  background-color: #96bbd3;
   border: none;
 }
 .current-city {
@@ -90,15 +90,16 @@ body {
   text-align: right;
 }
 
-.left-hand-col {
+.left-hand-col,
+.current-results {
   align-items: center;
 }
 .current-comment {
   display: block;
-  font-size: 18px;
-  font-weight: 400;
+  font-size: 16px;
+  font-weight: 300;
   position: relative;
-  top: -20px;
+  top: -10px;
 }
 .current-comment::first-letter {
   text-transform: capitalize;
@@ -138,6 +139,9 @@ body {
   text-align: center;
   font-size: 18px;
   font-weight: 300;
+}
+.extra-info {
+  margin-top: 30px;
 }
 
 /*end of results upper styling*/
